# hypermodern-python-series

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml  shay_run.py
src/hypermodern_python_series/: console.py  wikipedia.py
tests/: test_console.py
